--- a/samples/web/ext-settings.json
+++ b/samples/web/ext-settings.json
@@ -6,7 +6,7 @@
     "enableShutDownOnChange": false,
     "assemblies": {
       "Ws.Core.Extensions.StaticFiles": {
-        "priority": 1,
+        "priority": 100,
         "options": {
           "paths": [
             {
@@ -18,15 +18,21 @@
         }
       },
       "Ws.Core.Extensions.Cors": {
-        "priority": 2
+        "priority": 200
       },
       "Ws.Core.Extensions.Api": {
-        "priority": 2,
+        "priority": 300,
         "options": {
           "serialization": {
             "nullValueHandling": "Ignore",
             "formatting": "Indented",
-            "referenceLoopHandling": "Ignore"
+            "referenceLoopHandling": "Ignore",
+            "converters": [
+              {
+                "assembly": "web",
+                "type": "web.Code.LocaleJsonConverter"
+              }
+            ]
           },
           "documentation": {
             "routePrefix": "swagger",
@@ -50,7 +56,7 @@
         }
       },
       "__Ws.Core.Extensions.Data.EF": {
-        "priority": 19,
+        "priority": 399,
         "options": {
           "mappings": [
             {
@@ -73,7 +79,7 @@
         }
       },
       "Ws.Core.Extensions.Data.EF.SqlServer": {
-        "priority": 20,
+        "priority": 400,
         "options": {
           "connections": [
             {
@@ -83,9 +89,9 @@
           ]
         }
       },
-      "Ws.Core.Extensions.Data.FileSystem": { "priority": 50 },
+      "Ws.Core.Extensions.Data.FileSystem": { "priority": 500 },
       "Ws.Core.Extensions.Data.Cache": {
-        "priority": 4,
+        "priority": 600,
         "options": {
           "type": "Distributed",
           "redisOptions": {
@@ -104,9 +110,9 @@
             "never": 1440
           }
         }
-      },
+      },      
       "__Ws.Core.Extensions.Data.Cache.Memcached": {
-        "priority": 5,
+        "priority": 600,
         "options": {
           "client": {
             "servers": [
